k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: galaxy-bce-prod
  labels:
    app.kubernetes.io/name: galaxy-bce
    environment: production
